# windsurf-learning-journey

./: .gitignore  GOV-PM-CONSIDERATIONS.md  INTEGRATION-ROADMAP.md  MY-ACTUAL-DAILY-WORKFLOW.md  PROJECT-CONTEXT.md  README.md  daily-standup-notes.md  milestones.csv  my-learning-notes.txt  parent-tasks.csv  product-roadmap-milestones.csv  product-roadmap-parent-tasks.csv  product-roadmap-subtasks.csv  subtasks-clickup-ready.csv  subtasks.csv  technical-governance-analysis-and-tasks.md  technical-governance-clickup-structured.md  technical-governance-review-prompt.md
projects/EDS/govassist-eds-service-dev/: .env.example  .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.celery.excel  Dockerfile.celery.report  README.md  alembic.ini  docker-compose.dev.yml  keyvault.md  keyvault.ps1  main.py  pyproject.toml
projects/EDS/govassist-eds-service-dev/.github/workflows/: build-celery-excel.yml  build-celery-general.yml  build-celery-report.yml  build.yml  checks.yaml  validate-pr.yml
projects/EDS/govassist-eds-service-dev/SERVICEBUS/: _deploy.ps1  abs-automation-queue.bicep  automation-queue.bicep  dev-automation-queue.bicep  dev-em-event-queue.bicep  em-event-queue.bicep  old-workforce-queue-resp.bicep  old-workforce-queue.bicep  sharepoint_file_processing.bicep  sharepoint_file_processing_staging.bicep  sharepoint_file_processing_test.bicep  sharepoint_file_processing_test_without_duplicates.bicep  sharepoint_file_processing_test_without_duplicates_new.bicep  sharepoint_file_procession.bicep  stg-automation-queue.bicep  stg-em-event-queue.bicep  wf-doc-event-queue-stg.bicep  wf-doc-event-queue.bicep
projects/EDS/govassist-eds-service-dev/migrations/: README.md  env.py
projects/EDS/govassist-eds-service-dev/src/: Sample_Budget.xlsx  __init__.py  celery_app.py  main.py
projects/EDS/govassist-eds-service-dev/src/agents/: analyzer_agent.py  clarify_agent.py  report_generation_manager_agent.py
projects/EDS/govassist-eds-service-dev/src/api/: __init__.py  routes.py
projects/EDS/govassist-eds-service-dev/src/core/: config.py  container.py  database.py  dependencies.py  event_listeners.py  exception_handlers.py  exceptions.py  extensions.py  middleware.py  redis_client.py  redis_config.py  security.py  sharepoint_handler.py  workflow_handler.py
projects/EDS/govassist-eds-service-dev/src/elasticsearch/: aggregation_utils.py  client.py  constants.py  filter_utils.py  group_by.py  (+4 more)
(+296 files in other folders)
