[project]
name = "EDS"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0) ; python_version >= \"3.13\" and python_version < \"4.0\"",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "azure-identity (>=1.21.0,<2.0.0)",
    "azure-keyvault-secrets (>=4.9.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sendgrid (>=6.11.0,<7.0.0)",
    "azure-monitor-opentelemetry==1.0.0",
    "opentelemetry-api>=1.12,<2.0",
    "opentelemetry-sdk>=1.12,<2.0",
    "opentelemetry-instrumentation==0.44b0",
    "opentelemetry-exporter-otlp>=1.12,<2.0",
    "opentelemetry-instrumentation-fastapi==0.44b0",
    "opentelemetry-semantic-conventions==0.44b0",
    "elasticsearch==8.11.1",
    "aiohttp (>=3.11.18,<4.0.0)",
    "abs-auth-rbac-core (>=0.1.5,<0.2.0)",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.10",
    "langchain_openai",
    "openai>=1.12.0",
    "tiktoken>=0.5.2",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "langgraph-supervisor (>=0.0.27,<0.0.28)",
    "ipython (>=9.3.0,<10.0.0)",
    "langchain-anthropic (>=0.3.15,<0.4.0)",
    "abs-nosql-repository-core (>=0.9.0,<0.10.0)",
    "abs-langchain-core (>=0.1.4,<0.2.0)",
    "abs-utils (>=0.3.0,<0.4.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "redis (>=6.2.0,<7.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "lark (>=1.2.2,<2.0.0)",
    "langgraph-checkpoint-mongodb (>=0.1.4,<0.2.0)",
    "azure-storage-blob (>=12.26.0,<13.0.0)",
    "abs-langchain-suite (>=0.2.2,<0.3.0)",
    "azure-servicebus (>=7.14.2,<8.0.0)",
]

[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.7"
ruff = "^0.11.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
